# VTaraAppBackend

./: .env  .env.example  README.md  config.py  manage.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/models/: canvas.py  config_damage_scenario.py  configuration.py  damage_scenario.py  edge.py  group.py  node.py  project.py  project_damage_scenario.py
app/routes/: api.py  canvas.py  configuration.py  damage_scenario.py  project.py  test.json
app/schemas/: canvas.py  configuration.py  damage_scenario.py  edge.py  group.py  node.py  project.py
migrations/versions/: 24a5993a37ac_add_edges_handles.py  763a8892cac7_orm_based_added_config_filed_to_project_.py  78b100f74813_added_configuation_model.py  811f06f2a380_added_config_filed_to_project_and_.py  a83bf9ab81dc_add_canvas_table.py  accc094ef7ef_add_canvas_model.py  b89302fb1030_add_project_model.py  cdcdc_update_edge_model.py  fd43db82fa5d_all_new_creation.py
tests/: test_project.py
